# mechanica

./: Cargo.toml  LICENSE-MIT  references.md
src/: aabb.rs  aabb_tree.rs  bevy_.rs  bvh.rs  closest.rs  collider.rs  constraint.rs  contact.rs  gauss.rs  gjk.rs  glam_ext.rs  hull.rs  lib.rs  list.rs  mesh_edit.rs  polyhedron.rs  rigid.rs  sat.rs  testbench.rs  zorder.rs
src/constraint/: contact.rs  mod.rs  positional.rs  prismatic.rs  revolute.rs
src/nmesh/: bevy_.rs  edit.rs  mod.rs
