[package]
name = "cg3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
arrayvec = "0.7.4"
bevy_egui = "0.22.0"
bevy_infinite_grid = "0.8.1"
bevy_mod_picking = "0.15.0"
bevy_mod_raycast = "0.14.1"
bevy_transform_gizmo = "0.8.0"
bitflags = "2.4.0"
bitvec = "1.0.1"
glam = { version = "0.24.2", features = ["approx"] }
hashbrown = "0.14.1"
slotmap = "1.0.6"

[dependencies."bevy"]
version = "0.11.3"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "dynamic_linking",
    "multi-threaded",
    "x11",
    "ktx2",
    "zstd",
    "tonemapping_luts",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
