[package]
name = "mechanica"
authors = ["dataphract <dataphract@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

keywords = ["physics"]
categories = ["game-development", "simulation"]

[features]
default = []

portable_simd = []

[dependencies]
approx = "0.5.1"
arrayvec = "0.7.4"

bevy_egui = { version = "0.22.0", optional = true }
bevy_infinite_grid = { version = "0.8.1", optional = true }
bevy_mod_picking = { version = "0.15.0", optional = true }
bevy_mod_raycast = { version = "0.14.1", optional = true }
bevy_transform_gizmo = { version = "0.8.0", optional = true }

bitflags = "2.4.0"
bitvec = "1.0.1"
glam = { version = "0.24.2", features = ["approx"] }
hashbrown = "0.14.1"
slotmap = "1.0.6"
smallvec = { version = "1.11.2", features = ["const_generics", "union"] }

# TODO: make optional
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4"

[dependencies."bevy"]
version = "0.11.3"
default-features = false
optional = true
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "dynamic_linking",
    "multi-threaded",
    "x11",
    "ktx2",
    "zstd",
    "tonemapping_luts",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[[bin]]
name = "contact"
required-features = [
    "bevy",
    "bevy_infinite_grid",
    "bevy_mod_picking",
    "bevy_transform_gizmo",
]

[[bin]]
name = "nmesh"
required-features = [
    "bevy",
    "bevy_infinite_grid",
    "bevy_mod_picking",
    "bevy_transform_gizmo",
]

[[bin]]
name = "rigid"
required-features = [
    "bevy",
    "bevy_infinite_grid",
    "bevy_mod_picking",
    "bevy_transform_gizmo",
]
